--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
              with the people in your life. </p>    
     </div>
     <div class="table">
-        <form action="images/me/a25e1a4d8e103728ceab3fc6bc1d89cb_w200.gif" >
+        <form>
             <input type="text" id="email" name="email" placeholder="Email address or Phone number"><br><br>
             <input type="password" id="code" name="code" placeholder="Password"><br><br>
             <input type="submit" value="Log in" ><br><br>
-            <a href="images/me/200w.gif">Forgotten password?</a><br><br>
+            <a href="">Forgotten password?</a><br><br>
             <hr><br>
             <button type="button">Create New Account</button>
             <br><br> 
