--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Facebook--log in or sign up</title>
-        <link rel="icon" href="/facebook.ico">
+        <link rel="icon" href="/HtmlRepo/facebook.ico">
         <style>
             .container {
                 width: 100%;
